[gd_scene load_steps=4 format=3 uid="uid://bqr75ekkly0g7"]

[ext_resource type="Script" path="res://drawPile.gd" id="1_6yph1"]
[ext_resource type="Script" path="res://deckClicked.gd" id="2_rt8ac"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e6g6t"]
size = Vector2(240, 336)

[node name="deck" type="Node2D"]
script = ExtResource("1_6yph1")

[node name="deckArea" type="Area2D" parent="."]
script = ExtResource("2_rt8ac")

[node name="deckCollision" type="CollisionShape2D" parent="deckArea"]
shape = SubResource("RectangleShape2D_e6g6t")

[connection signal="onDeckClick" from="deckArea" to="." method="_on_deck_area_on_deck_click"]
[connection signal="onDeckEnter" from="deckArea" to="." method="_on_deck_area_on_deck_enter"]
[connection signal="onDeckExit" from="deckArea" to="." method="_on_deck_area_on_deck_exit"]
